workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/TipoDeEndosso__mdt.object-meta.xml
<CustomObject>
    <label>Tipo de Endosso</label>
    <pluralLabel>Tipos de Endosso</pluralLabel>
</CustomObject>