workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/fields/FrasePadrao__c.field-meta.xml
<CustomField>
    <fullName>FrasePadrao__c</fullName>
    <label>Frase Padrão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>