workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>