workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/fields/SiglaSalesforce__c.field-meta.xml
<CustomField>
    <fullName>SiglaSalesforce__c</fullName>
    <label>Sigla Salesforce</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>