workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/fields/TipoEndosso__c.field-meta.xml
<CustomField>
    <fullName>TipoEndosso__c</fullName>
    <label>Tipo de Endosso</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>