workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/fields/TipoEndosso_CodigoOperacao__c.field-meta.xml
<CustomField>
    <fullName>TipoEndosso_CodigoOperacao__c</fullName>
    <label>Tipo de endosso | Código de operação</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>