workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/fields/TipoEndossoBCP__c.field-meta.xml
<CustomField>
    <fullName>TipoEndossoBCP__c</fullName>
    <label>Tipo de endosso BCP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>