workspace-sf/force-app/main/default/objects/TipoDeEndosso__mdt/listViews/TODOS.listView-meta.xml
<ListView>
    <fullName>TODOS</fullName>
    <columns>Prioridade__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SiglaSalesforce__c</columns>
    <columns>FrasePadrao__c</columns>
    <columns>TipoEndosso__c</columns>
    <columns>TipoEndosso_CodigoOperacao__c</columns>
    <columns>TipoEndossoBCP__c</columns>
    <filterScope>Everything</filterScope>
    <label>TODOS</label>
</ListView>